--- a/Controle-tarefas-react/frontend/package.json
+++ b/Controle-tarefas-react/frontend/package.json
@@ -27,7 +27,9 @@
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
     "style-loader": "^0.13.1",
+    "url-loader": "^1.1.2",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
-  }
+  },
+  "dependencies": {}
 }
