--- a/Controle-tarefas-react/frontend/package.json
+++ b/Controle-tarefas-react/frontend/package.json
@@ -28,7 +28,9 @@
     "react-redux": "^5.0.7",
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
+    "redux-multi": "^0.1.12",
     "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.2.0",
     "style-loader": "^0.13.1",
     "url-loader": "^1.1.2",
     "webpack": "^1.14.0",
